objects/BMCServiceDesk__BMC_Organization__c.object
<CustomObject>
    <description>BMC_Organization: CMDB Class that stores information about business organizations including business units. An organization is composed of employees and contractors who are providers or consumers of business services. A business unit can be composed of multiple organizations.  This class is a combination of the DMTF CIM_Organization and CIM_OrganizationalEntity classes.</description>
    <fields>
        <fullName>BMCServiceDesk__BusinessCategory__c</fullName>
        <label>Business Category</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Email__c</fullName>
        <label>Email</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__URI__c</fullName>
        <label>URI</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Organization</label>
    <nameField>
        <label>BMC_Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>